--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "TypeScript declarations for the ClearBlade Code Service engine",
   "main": "index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm run lint",
+    "lint": "dtslint ."
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,10 @@
   "bugs": {
     "url": "https://github.com/ClearBlade/code-service-types/issues"
   },
-  "homepage": "https://github.com/ClearBlade/code-service-types#readme"
+  "homepage": "https://github.com/ClearBlade/code-service-types#readme",
+  "dependencies": {},
+  "devDependencies": {
+    "dtslint": "^2.0.5"
+  },
+  "types": "types"
 }
