fixed dslint errors: types array now empty, using reference types instead

--- a/types/tsconfig.json
+++ b/types/tsconfig.json
@@ -6,7 +6,7 @@
       "noImplicitThis": true,
       "strictFunctionTypes": true,
       "strictNullChecks": true,
-      "types": ["node"],
+      "types": [],
       "noEmit": true,
       "forceConsistentCasingInFileNames": true,
 
