--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "url": "https://github.com/ClearBlade/code-service-types/issues"
   },
   "homepage": "https://github.com/ClearBlade/code-service-types#readme",
+  "dependencies": {
+    "@types/node": "^17.0.23"
+  },
   "devDependencies": {
-    "@types/node": "^17.0.23",
     "dtslint": "^4.2.1"
   },
   "types": "types"
