--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "url": "https://github.com/ClearBlade/code-service-types/issues"
   },
   "homepage": "https://github.com/ClearBlade/code-service-types#readme",
+  "dependencies": {
+    "@types/node": "^17.0.23"
+  },
   "devDependencies": {
     "dtslint": "^4.2.1"
   },
